--- a/assets/main.css
+++ b/assets/main.css
@@ -1,8 +1,9 @@
 /**
  * Colors
  */
-body {
+body, p, h1, h2 {
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -87,27 +88,39 @@ h1 {
 
 .photographer_section {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   gap: 70px;
   margin-top: 100px;
 }
 
-.photographer_section article {
-  justify-self: center;
+.photographer-card {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
-.photographer_section article h2 {
-  color: #D3573C;
-  font-size: 36px;
+.photographer-card__portrait {
+  height: 12.5rem;
+  width: 12.5rem;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center 10%;
 }
-
-.photographer_section article img {
-  height: 200px;
-  width: 200px;
+.photographer-card__name {
+  color: #D3573C;
+  font-size: 2.25rem;
+  margin-top: 1.25rem;
+}
+.photographer-card__location {
+  color: #901C1C;
+  font-size: 0.8125rem;
+}
+.photographer-card__tagline {
+  font-size: 0.625rem;
+}
+.photographer-card__price {
+  font-size: 0.5625rem;
+  color: #757575;
 }
 
 .photograph-header {
