--- a/stylesheets/base/_reset.scss
+++ b/stylesheets/base/_reset.scss
@@ -1,4 +1,9 @@
-body, p, h1, h2 {
+html, body, p, h1, h2, button {
   margin: 0;
   padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
 }
