--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -1,19 +1,20 @@
 @use "../abstracts" as *;
 
-header {
+body > header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 90px;
+  height: 5.625rem;
+  padding: 0 6.25rem;
 }
 
 h1 {
   color: $primary;
-  margin-right: 100px;
+  font-size: 2.25rem;
+  font-weight: 400;
 }
 
 .logo {
-  height: 50px;
-  margin-left: 100px;
+  height: 3.125rem;
 }
