--- a/stylesheets/pages/_landing-page.scss
+++ b/stylesheets/pages/_landing-page.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 70px;
-  margin-top: 100px;
+  margin-top: 6.25rem;
 }
 
 .photographer-card {
@@ -13,18 +13,25 @@
   align-items: center;
   flex-direction: column;
 
-  &__portrait {
-    height: 12.5rem;
-    width: 12.5rem;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center 10%;
-  }
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1.25rem;
 
-  &__name {
-    color: $secondary;
-    font-size: 2.25rem;
-    margin-top: 1.25rem;
+    img {
+      height: 12.5rem;
+      width: 12.5rem;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    h2 {
+      color: $secondary;
+      font-size: 2.25rem;
+      font-weight: 400;
+    }
   }
 
   &__location {
