--- a/stylesheets/pages/_photographer.scss
+++ b/stylesheets/pages/_photographer.scss
@@ -2,8 +2,50 @@
 
 .photograph-header {
   background-color: $grey2;
-  height: 300px;
-  margin: 0 100px;
+  height: 19.5625rem;
+  margin: 0 6.25rem;
+  padding: 0 3.13rem;
+  display: flex;  // todo might need to use grid if contact button needs to be centered
+  justify-content: space-between;
+  align-items: center;
+
+  &__info, &__portrait {
+    flex-grow: 1;
+    flex-basis: 0;
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 1.19rem;
+  }
+
+  &__name {
+    color: $secondary;
+    font-size: 4rem;
+    font-weight: 400;
+  }
+
+  &__location {
+    color: $primary;
+    font-size: 1.5rem;
+  }
+
+  &__tagline {
+    color: $grey1;
+    font-size: 1.125rem;
+  }
+
+  &__portrait {
+    display: flex;
+    justify-content: flex-end;
+    img {
+      width: 12.5rem;
+      height: 12.5rem;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
 }
 
 .contact_button {
