--- a/stylesheets/pages/_landing-page.scss
+++ b/stylesheets/pages/_landing-page.scss
@@ -1,50 +1,13 @@
 @use "../abstracts" as *;
 
+main {
+  padding: 0 6.25rem;
+  //max-width: 1400px;
+}
+
 .photographer_section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 70px;
   margin-top: 6.25rem;
-}
-
-.photographer-card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-  &__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 1.25rem;
-
-    img {
-      height: 12.5rem;
-      width: 12.5rem;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-
-    h2 {
-      color: $secondary;
-      font-size: 2.25rem;
-      font-weight: 400;
-    }
-  }
-
-  &__location {
-    color: $primary;
-    font-size: 0.8125rem;
-  }
-
-  &__tagline {
-    font-size: 0.625rem;
-  }
-
-  &__price {
-    font-size: 0.5625rem;
-    color: $grey3;
-  }
 }
