--- a/stylesheets/abstracts/_variables.scss
+++ b/stylesheets/abstracts/_variables.scss
@@ -3,8 +3,10 @@
  */
 $primary: #901C1C;
 $secondary: #D3573C;
+$secondarySubtle: #DB8876;
 $grey1: #525252;
 $grey2: #FAFAFA;
 $grey3: #757575;
 $white: #fff;
 $black: #000;
+$overlay: rgba(196, 196, 196, 0.40);
