--- a/stylesheets/pages/_photographer.scss
+++ b/stylesheets/pages/_photographer.scss
@@ -82,7 +82,7 @@
   position: fixed;
   bottom: 0;
   right: 2.25rem;
-  background: $secondary;
+  background: $secondarySubtle;
   display: flex;
   gap: 4.09rem;
   align-items: center;
