--- a/assets/main.css
+++ b/assets/main.css
@@ -52,38 +52,52 @@ body {
   display: none;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(196, 196, 196, 0.4);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .modal {
-  border-radius: 5px;
   background-color: #DB8876;
+  border-radius: 0.3125rem;
   width: 50%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 35px;
-  margin: auto;
+  padding: 0.94rem 1.25rem 2.37rem 2.19rem;
+  box-shadow: -5px 10px 30px 0px rgba(0, 0, 0, 0.25);
 }
-
-.modal header {
-  justify-content: space-between;
-  width: 100%;
-}
-
-.modal header img {
-  cursor: pointer;
-}
-
-.modal header h2 {
-  font-size: 64px;
-  font-weight: normal;
-  text-align: center;
-}
-
-form {
+.modal__header {
   display: flex;
-  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.19rem;
+}
+.modal__header h2 {
+  font-size: 4rem;
+  font-weight: 400;
+}
+.modal__body {
+  display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  margin-right: 0.94rem;
+}
+
+#closeModalBtn {
+  background: none;
+  cursor: pointer;
+  border: 0;
+}
+#closeModalBtn img {
+  width: 4.5rem;
+  height: 4.5rem;
 }
 
 form label {
@@ -104,6 +118,10 @@ form input {
   height: 68px;
   border: none;
   border-radius: 5px;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 .photographer-card {
@@ -247,7 +265,7 @@ main {
   position: fixed;
   bottom: 0;
   right: 2.25rem;
-  background: #D3573C;
+  background: #DB8876;
   display: flex;
   gap: 4.09rem;
   align-items: center;
