--- a/stylesheets/components/_modal.scss
+++ b/stylesheets/components/_modal.scss
@@ -1,39 +1,59 @@
+@use "../abstracts" as *;
+
 #contact_modal {
   display: none;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: $overlay;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .modal {
-  border-radius: 5px;
-  background-color: #DB8876;
+  background-color: $secondarySubtle;
+  border-radius: 0.3125rem;
   width: 50%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 35px;
-  margin: auto;
+  padding: 0.94rem 1.25rem 2.37rem 2.19rem;
+  box-shadow: -5px 10px 30px 0px rgba(0, 0, 0, 0.25);
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1.19rem;
+
+    h2 {
+      font-size: 4rem;
+      font-weight: 400;
+    }
+  }
+
+  &__body {
+    display: flex;
+    flex-direction: column;
+    margin-right: 0.94rem;
+  }
 }
 
-.modal header {
-  justify-content: space-between;
-  width: 100%;
-}
-
-.modal header img {
+#closeModalBtn {
+  background: none;
   cursor: pointer;
-}
+  border: 0;
 
-.modal header h2 {
-  font-size: 64px;
-  font-weight: normal;
-  text-align: center;
-}
-
-form {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  align-items: flex-start;
+  img {
+    width: 4.5rem;
+    height: 4.5rem;
+  }
 }
 
 form label {
@@ -54,4 +74,8 @@ form input {
   height: 68px;
   border: none;
   border-radius: 5px;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
