--- a/stylesheets/abstracts/_variables.scss
+++ b/stylesheets/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $secondarySubtle: #DB8876;
 $grey1: #525252;
 $grey2: #FAFAFA;
 $grey3: #757575;
+$grey4: #312E2E;
 $white: #fff;
 $black: #000;
 $overlay: rgba(196, 196, 196, 0.40);
