--- a/stylesheets/components/_modal.scss
+++ b/stylesheets/components/_modal.scss
@@ -29,7 +29,7 @@
   &__header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     margin-bottom: 1.19rem;
 
     h2 {
@@ -42,6 +42,29 @@
     display: flex;
     flex-direction: column;
     margin-right: 0.94rem;
+
+    label {
+      font-size: 2.25rem;
+      font-weight: 400;
+      color: $grey4;
+    }
+
+    input, textarea {
+      border: none;
+      border-radius: 0.3125rem;
+      font-size: 1.5rem;
+      padding: 0.5rem;
+      box-sizing: border-box;
+    }
+
+    input {
+      height: 4.25rem;
+    }
+
+    button[type="submit"] {
+      margin-top: 1.63rem;
+      align-self: flex-start;
+    }
   }
 }
 
@@ -49,31 +72,15 @@
   background: none;
   cursor: pointer;
   border: 0;
+  width: 4.5rem;
+  height: 4.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   img {
-    width: 4.5rem;
-    height: 4.5rem;
+
   }
-}
-
-form label {
-  color: #312E2E;
-  font-size: 36px;
-}
-
-form div {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: self-start;
-  margin-bottom: 26px;
-}
-
-form input {
-  width: 100%;
-  height: 68px;
-  border: none;
-  border-radius: 5px;
 }
 
 .no-scroll {
