--- a/stylesheets/base/_reset.scss
+++ b/stylesheets/base/_reset.scss
@@ -1,4 +1,4 @@
-html, body, p, h1, h2, button {
+html, body, p, h1, h2, h3, button {
   margin: 0;
   padding: 0;
 }
@@ -6,4 +6,15 @@ html, body, p, h1, h2, button {
 a {
   color: inherit;
   text-decoration: inherit;
+}
+
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
