--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,7 @@
 /**
  * Colors
  */
-html, body, p, h1, h2, h3, button {
+html, body, p, h1, h2, h3, button, ul, li {
   margin: 0;
   padding: 0;
 }
@@ -22,8 +22,16 @@ a {
   width: 1px;
 }
 
+ul {
+  list-style: none;
+}
+
 body {
   font-family: "DM Sans", sans-serif;
+}
+
+#lightbox {
+  display: none;
 }
 
 .carousel {
@@ -34,7 +42,6 @@ body {
   left: 0;
   background-color: #fff;
   z-index: 100;
-  display: flex;
   align-items: center;
   padding: 0 6.25rem;
 }
@@ -70,12 +77,13 @@ body {
 }
 .carousel__item {
   height: 100%;
-  display: flex;
+  display: none;
   flex-direction: column;
   gap: 0.75rem;
 }
-.carousel__item img {
+.carousel__item img, .carousel__item video {
   flex: 1;
+  overflow: hidden;
   object-fit: cover;
 }
 .carousel__item h3 {
