--- a/stylesheets/base/_reset.scss
+++ b/stylesheets/base/_reset.scss
@@ -1,4 +1,4 @@
-html, body, p, h1, h2, h3, button {
+html, body, p, h1, h2, h3, button, ul, li {
   margin: 0;
   padding: 0;
 }
@@ -17,4 +17,8 @@ a {
   padding: 0;
   position: absolute;
   width: 1px;
+}
+
+ul {
+    list-style: none;
 }
