--- a/assets/main.css
+++ b/assets/main.css
@@ -26,7 +26,7 @@ ul {
   list-style: none;
 }
 
-body {
+* {
   font-family: "DM Sans", sans-serif;
 }
 
@@ -129,6 +129,9 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   white-space: nowrap;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 #contact_modal {
