--- a/stylesheets/components/_media-card.scss
+++ b/stylesheets/components/_media-card.scss
@@ -36,5 +36,8 @@
     font-size: 1.5rem;
     font-weight: 500;
     white-space: nowrap;
+    background: none;
+    border: none;
+    cursor: pointer;
   }
 }
