--- a/assets/main.css
+++ b/assets/main.css
@@ -360,4 +360,80 @@ main {
   font-weight: 500;
 }
 
+/**
+ * Listbox
+ */
+.listbox {
+  min-width: 10.625rem;
+  position: relative;
+}
+.listbox__selected {
+  width: 100%;
+  font-size: 1.125rem;
+  font-weight: 700;
+  padding: 1.25rem 1.44rem;
+  border: none;
+  border-radius: 0.3125rem;
+  background-color: #901C1C;
+  color: #fff;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+.listbox__selected::before {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 1.44rem;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f078";
+}
+.listbox__options {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #901C1C;
+  border-radius: 0.3125rem;
+  display: none;
+  flex-direction: column;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.listbox__option {
+  font-size: 1.125rem;
+  font-weight: 700;
+  padding: 1.25rem 1.44rem;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+}
+.listbox__option:not(:last-child)::after {
+  content: "";
+  display: block;
+  height: 1px;
+  background-color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0.62rem;
+  right: 0.62rem;
+}
+.listbox__option:first-child {
+  border-radius: 0.3125rem 0.3125rem 0 0;
+}
+.listbox__option:first-child::before {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 1.44rem;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f077";
+}
+.listbox__option:last-child {
+  border-radius: 0 0 0.3125rem 0.3125rem;
+}
+
 /*# sourceMappingURL=main.css.map */
